chau packagelock y sigo con el i18

--- a/client/src/translations/es/global.json
+++ b/client/src/translations/es/global.json
@@ -8,6 +8,35 @@
 		"Mis-Pedidos": "Mis Pedidos"
 	},
 
+	"Panel": {
+		"Titulo": "Panel de administrador",
+		"Crear": "Crear Prenda",
+		"Listado": "Listado de prendas",
+		"Ordenes": "Listado de ordenes",
+		"Usuarios": "Listado de usuarios"
+	},
+
+	"CrearPrenda": {
+		"Titulo": "Crear prenda",
+		"Nombre": "Nombre",
+		"Precio": "Precio",
+		"Color": "Color",
+		"Genero": "Genero",
+		"Detalles": "Detalles",
+		"Tipos": "Tipos",
+		"Talles": "Talles",
+		"Agregar-Talle": "Agregar talle",
+		"Categorias": "Categorias",
+		"Agregar-Categoria": "Agregar categorias",
+		"Confirmar": "CONFIRMAR",
+		"Cancelar": "Cancelar",
+		"Exitoso": "Tu producto ha sido creado correctamente.",
+		"Atencion": "¡Atención!",
+		"Faltan": "Faltan ítems para poder crear tu producto.",
+		"Hecho": "¡Hecho!"
+	},
+
+
 	"Login": {
 		"Ingresar": "Ingresar",
 		"Salir": "Salir"
@@ -39,6 +68,16 @@
 		"Ver-Carrito": "Ver carrito"
 	},
 
+	"CartScreen": {
+		"Titulo": "Carrito de Compras",
+		"Precio": "Precio",
+		"Talle": "Talle",
+		"Articulos": "Articulos",
+		"Total": "Total",
+		"Proceder": "Proceder a la compra",
+		"Continuar-Comprando": "Continuar Comprando"
+	},
+
 	"Talle": {
 		"Talle": "Talle"
 	},
@@ -50,7 +89,7 @@
 		"Mas-Vendido": "Lo mas vendido",
 		"Informacion": "Informacion",
 		"Privacidad": "Aviso de privacidad",
-		"Tyc": "Terminos y condiciones",
+		"TyC": "Terminos y condiciones",
 		"Preguntas-F": "Preguntas Frecuentes",
 		"Contactanos": "Contactanos"
 	}
