--- a/client/src/translations/en/global.json
+++ b/client/src/translations/en/global.json
@@ -8,6 +8,34 @@
 		"Mis-Pedidos": "My Orders"
 	},
 
+	"Panel": {
+		"Titulo": "Admin panel",
+		"Crear": "Create clothe",
+		"Listado": "Clothing list",
+		"Ordenes": "Order list",
+		"Usuarios": "User List"
+	},
+
+	"CrearPrenda": {
+		"Titulo": "Create clothe",
+		"Nombre": "Name",
+		"Precio": "Price",
+		"Color": "Color",
+		"Genero": "Genre",
+		"Detalles": "Details",
+		"Tipos": "Types",
+		"Talles": "Sizes",
+		"Agregar-Talle": "Add size",
+		"Categorias": "Categories",
+		"Agregar-Categoria": "Add categories",
+		"Confirmar": "SUBMIT",
+		"Cancelar": "Cancel",
+		"Exitoso": "Your product has been created successfully",
+		"Atencion": "¡Alert!",
+		"Faltan": "Items are missing to create your product",
+		"Hecho": "¡Done!"
+	},
+
 	"Login": {
 		"Ingresar": "Login",
 		"Salir": "Logout"
@@ -39,6 +67,16 @@
 		"Ver-Carrito": "Go to cart"
 	},
 
+	"CartScreen": {
+		"Titulo": "Shopping Cart",
+		"Precio": "Price",
+		"Talle": "Size",
+		"Articulos": "Articles",
+		"Total": "Total",
+		"Proceder": "Proceed to purchase",
+		"Continuar-Comprando": "Continue buying"
+	},
+
 	"Talle": {
 		"Talle": "Size"
 	},
@@ -50,7 +88,7 @@
 		"Mas-Vendido": "Best seller",
 		"Informacion": "Information",
 		"Privacidad": "Notice of Privacy",
-		"Tyc": "Terms and Conditions",
+		"TyC": "Terms and Conditions",
 		"Preguntas-F": "Frequent questions",
 		"Contactanos": "Contact Us"
 	}
