--- a/client/src/translations/es/global.json
+++ b/client/src/translations/es/global.json
@@ -15,6 +15,42 @@
 		"Usuarios": "Listado de usuarios"
 	},
 
+	"Checkout": {
+		"Verf-Mail": "Verificar los datos de la dirección de envío",
+		"Verf-Tarjeta": "Verificar los datos de la tarjeta",
+		"Verf-Tarjeta-Direcc": "Verificar los datos de la dirección de envío y la tarjeta",
+		"NoHayProd": "No hay productos en tu carrito",
+		"Direcc" : "Dirección de envio",
+		"In-Direcc": "Ingrese una dirección",
+		"Ciudad": "Ciudad",
+		"In-Ciudad": "Ingrese una ciudad",
+		"Prov": "Provincia",
+		"In-Prov": "Seleccion una provincia",
+		"Zip": "Ingrese un Zip",
+		"D-Tarjeta": "Datos de tarjeta",
+		"Resumen": "Resumen de la orden",
+		"Precio": "Precio",
+		"Talle": "Talle",
+		"Articulos": "Articulos",
+		"Total": "Total",
+		"Pagar": "Pagar"
+	},
+
+	"Listado-Users": {
+		"Id": "Id de usuario",
+		"Nombre": "Nombre de usuario",
+		"Email": "Email",
+		"SetAdmin": "set admin",
+		"RemoveAdmin": "remove admin",
+		"Entregado": "Entregado",
+		"ListaOrdenes": "Lista de ordenes",
+		"Prendas": "Prendas",
+		"Talle": "Talles",
+		"Cant": "Cantidad",
+		"Precio": "Precio",
+		"Total": "Total"
+	},
+
 	"CrearPrenda": {
 		"Titulo": "Crear prenda",
 		"Nombre": "Nombre",
