--- a/client/src/translations/es/global.json
+++ b/client/src/translations/es/global.json
@@ -51,6 +51,22 @@
 		"Total": "Total"
 	},
 
+	"History":{
+		"NoHay": "¡Aun no hay ninguna orden para mostrar!",
+		"Vuelve": "Vuelve cuando hayas realizado el pago de almenos una orden.",
+		"N-Orden": "Numero de orden",
+		"Prendas": "Prendas",
+		"Direcc": "Direccion",
+		"F-Pago": "Forma de pago",
+		"Detalle": "Detalle de la orden",
+		"Talle": "Talle",
+		"Cantidad": "Cantidad",
+		"Fecha-Compra": "Fecha de la compra",
+		"Hora-Compra": "Hora de la compra",
+		"R-Hecha": "Ya has hecho una reseña de esta prenda",
+		"Opi": "Podras dejar tu opinion cuando el producto sea entregado."
+	},
+
 	"CrearPrenda": {
 		"Titulo": "Crear prenda",
 		"Nombre": "Nombre",
