pusheo inicial nuevo heroku

--- a/client/src/translations/en/global.json
+++ b/client/src/translations/en/global.json
@@ -20,7 +20,7 @@
 		"Verf-Mail": "Verify the data of the shipping address",
 		"Verf-Tarjeta": "Verify card details",
 		"Verf-Tarjeta-Direcc": "Verify the data of the shipping address and the card",
-		"NoHayProd": "There are no products in your cart",
+		"NoHayProd": "You will be redirected to the main page",
 		"Direcc" : "Shipping Address",
 		"In-Direcc": "Please enter an address",
 		"Ciudad": "City",
