--- a/client/src/translations/es/global.json
+++ b/client/src/translations/es/global.json
@@ -19,7 +19,7 @@
 		"Verf-Mail": "Verificar los datos de la dirección de envío",
 		"Verf-Tarjeta": "Verificar los datos de la tarjeta",
 		"Verf-Tarjeta-Direcc": "Verificar los datos de la dirección de envío y la tarjeta",
-		"NoHayProd": "No hay productos en tu carrito",
+		"NoHayProd": "Seras redirigido a la pagina principal.",
 		"Direcc" : "Dirección de envio",
 		"In-Direcc": "Ingrese una dirección",
 		"Ciudad": "Ciudad",
